updated build config so shared building is supported

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project ( SDL_FFMPEG )
 
 set( CMAKE_C_FLAGS "-Wall -ansi -D_ISOC99_SOURCE -std=c99 -O2" )
 set( CMAKE_DEBUG_POSTFIX "d" )
+set( CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR} )
 
 add_subdirectory( lib )
 
