--- a/SDL_ffmpeg.cbp
+++ b/SDL_ffmpeg.cbp
@@ -27,14 +27,17 @@
          </MakeCommands>
       </Target>
       <Target title="SDL_ffmpeg">
-         <Option output="/Users/arjan/C/SDL_ffmpeg/lib/libSDL_ffmpeg.a" prefix_auto="0" extension_auto="0" />
+         <Option output="/Users/arjan/C/SDL_ffmpeg/lib/libSDL_ffmpeg.dylib" prefix_auto="0" extension_auto="0" />
          <Option working_dir="/Users/arjan/C/SDL_ffmpeg/lib" />
          <Option object_output="./" />
-         <Option type="2" />
+         <Option type="3" />
          <Option compiler="gcc" />
          <Compiler>
-            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
-            <Add directory="/Users/arjan/C/SDL_ffmpeg/include" />
+            <Add directory="/opt/local/include/SDL" />
+            <Add directory="/usr/include/libavformat" />
+            <Add directory="/usr/include/libavcodec" />
+            <Add directory="/usr/include/libavutil" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/include/SDL" />
             <Add directory="/include" />
          </Compiler>
          <MakeCommands>
@@ -45,14 +48,17 @@
          </MakeCommands>
       </Target>
       <Target title="SDL_ffmpeg/fast">
-         <Option output="/Users/arjan/C/SDL_ffmpeg/lib/libSDL_ffmpeg.a" prefix_auto="0" extension_auto="0" />
+         <Option output="/Users/arjan/C/SDL_ffmpeg/lib/libSDL_ffmpeg.dylib" prefix_auto="0" extension_auto="0" />
          <Option working_dir="/Users/arjan/C/SDL_ffmpeg/lib" />
          <Option object_output="./" />
-         <Option type="2" />
+         <Option type="3" />
          <Option compiler="gcc" />
          <Compiler>
-            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
-            <Add directory="/Users/arjan/C/SDL_ffmpeg/include" />
+            <Add directory="/opt/local/include/SDL" />
+            <Add directory="/usr/include/libavformat" />
+            <Add directory="/usr/include/libavcodec" />
+            <Add directory="/usr/include/libavutil" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/include/SDL" />
             <Add directory="/include" />
          </Compiler>
          <MakeCommands>
@@ -69,7 +75,8 @@
          <Option type="1" />
          <Option compiler="gcc" />
          <Compiler>
-            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
+            <Add directory="/opt/local/include/SDL" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/include/SDL" />
             <Add directory="/Users/arjan/C/SDL_ffmpeg/include" />
          </Compiler>
          <MakeCommands>
@@ -86,7 +93,8 @@
          <Option type="1" />
          <Option compiler="gcc" />
          <Compiler>
-            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
+            <Add directory="/opt/local/include/SDL" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/include/SDL" />
             <Add directory="/Users/arjan/C/SDL_ffmpeg/include" />
          </Compiler>
          <MakeCommands>
@@ -103,7 +111,8 @@
          <Option type="1" />
          <Option compiler="gcc" />
          <Compiler>
-            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
+            <Add directory="/opt/local/include/SDL" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/include/SDL" />
             <Add directory="/Users/arjan/C/SDL_ffmpeg/include" />
          </Compiler>
          <MakeCommands>
@@ -120,7 +129,8 @@
          <Option type="1" />
          <Option compiler="gcc" />
          <Compiler>
-            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
+            <Add directory="/opt/local/include/SDL" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/include/SDL" />
             <Add directory="/Users/arjan/C/SDL_ffmpeg/include" />
          </Compiler>
          <MakeCommands>
@@ -137,7 +147,8 @@
          <Option type="1" />
          <Option compiler="gcc" />
          <Compiler>
-            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
+            <Add directory="/opt/local/include/SDL" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/include/SDL" />
             <Add directory="/Users/arjan/C/SDL_ffmpeg/include" />
          </Compiler>
          <MakeCommands>
@@ -154,7 +165,8 @@
          <Option type="1" />
          <Option compiler="gcc" />
          <Compiler>
-            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
+            <Add directory="/opt/local/include/SDL" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/include/SDL" />
             <Add directory="/Users/arjan/C/SDL_ffmpeg/include" />
          </Compiler>
          <MakeCommands>
@@ -171,7 +183,8 @@
          <Option type="1" />
          <Option compiler="gcc" />
          <Compiler>
-            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
+            <Add directory="/opt/local/include/SDL" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/include/SDL" />
             <Add directory="/Users/arjan/C/SDL_ffmpeg/include" />
          </Compiler>
          <MakeCommands>
@@ -188,7 +201,8 @@
          <Option type="1" />
          <Option compiler="gcc" />
          <Compiler>
-            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
+            <Add directory="/opt/local/include/SDL" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/include/SDL" />
             <Add directory="/Users/arjan/C/SDL_ffmpeg/include" />
          </Compiler>
          <MakeCommands>
@@ -205,7 +219,8 @@
          <Option type="1" />
          <Option compiler="gcc" />
          <Compiler>
-            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
+            <Add directory="/opt/local/include/SDL" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/include/SDL" />
             <Add directory="/Users/arjan/C/SDL_ffmpeg/include" />
          </Compiler>
          <MakeCommands>
@@ -222,7 +237,8 @@
          <Option type="1" />
          <Option compiler="gcc" />
          <Compiler>
-            <Add directory="/Library/Frameworks/SDL.framework/Headers" />
+            <Add directory="/opt/local/include/SDL" />
+            <Add directory="/Users/arjan/C/SDL_ffmpeg/include/SDL" />
             <Add directory="/Users/arjan/C/SDL_ffmpeg/include" />
          </Compiler>
          <MakeCommands>
