added doxygen target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,5 @@ set( CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR} )
 add_subdirectory( lib )
 
 add_subdirectory( bin )
+
+add_subdirectory( doc )
