added doxygen target, documentation can be build by issuing 'make documentation'

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,8 +1,13 @@
 
-find_package( doxygen )
+find_package( Doxygen )
 
 if( DOXYGEN_FOUND )
 
-	add_custom_target( doc ${DOXYGEN_EXECUTABLE} ${DOXY_CONFIG} )
+	configure_file( ${SDL_FFMPEG_SOURCE_DIR}/doc/doxygen.in
+					${SDL_FFMPEG_SOURCE_DIR}/doc/doxygen.config
+					@ONLY IMMEDIATE )
+
+	add_custom_target( documentation
+					   ${DOXYGEN_EXECUTABLE} ${SDL_FFMPEG_SOURCE_DIR}/doc/doxygen.config )
 
 endif( DOXYGEN_FOUND )
