--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required( VERSION 2.6 )
 
 project ( SDL_FFMPEG )
 
+set( SDL_FFMPEG_VERSION "1.0.0" )
+
 set( CMAKE_C_FLAGS "-Wall -ansi -std=c99 -O2 -D_ISOC99_SOURCE" )
 
 if( WIN32 )
