--- a/SDL_ffmpeg.vcproj
+++ b/SDL_ffmpeg.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="include/SDL"
-				PreprocessorDefinitions="MSVC;BUILD_DLL;WIN32;HAVE_STDINT_H"
+				PreprocessorDefinitions="MSVC;BUILD_DLL;WIN32"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -123,7 +123,7 @@
 				Optimization="3"
 				FavorSizeOrSpeed="1"
 				AdditionalIncludeDirectories="include/SDL"
-				PreprocessorDefinitions="MSVC;BUILD_DLL;WIN32;HAVE_STDINT_H"
+				PreprocessorDefinitions="MSVC;BUILD_DLL;WIN32"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
