try to fix some include fail

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,6 +8,10 @@ if( CMAKE_GENERATOR MATCHES "Visual .*" )
 
 endif()
 
+find_package( SDL REQUIRED )
+
+find_package( SDL_FFMPEG REQUIRED )
+
 add_executable(	example         ${EXAMPLES_SOURCE_DIR}/example.c )
 
 add_executable(	record          ${EXAMPLES_SOURCE_DIR}/record.c )
@@ -18,11 +22,9 @@ add_executable(	audioplayer     ${EXAMPLES_SOURCE_DIR}/audioplayer.c )
 
 add_executable(	extractaudio	${EXAMPLES_SOURCE_DIR}/extractaudio.c )
 
-find_package( SDL REQUIRED )
-
-find_package( SDL_ffmpeg REQUIRED )
-
-include_directories( ${SDL_INCLUDE_DIR} ${SDL_FFMPEG_INCLUDE_DIR} )
+include_directories( ${SDL_FFMPEG_INCLUDE_DIR}
+					 ${SDL_INCLUDE_DIR}
+)
 
 target_link_libraries(	example
 						${SDL_FFMPEG_LIBRARY}
@@ -43,5 +45,3 @@ target_link_libraries(	audioplayer
 target_link_libraries(	extractaudio
 						${SDL_FFMPEG_LIBRARY}
 						${SDL_LIBRARY} )
-
-include_directories( ${SDL_FFMPEG_SOURCE_DIR}/include )
