updated error reporting system, needs some work still

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,6 +8,8 @@ if( CMAKE_GENERATOR MATCHES "Visual .*" )
 
 endif()
 
+add_definitions( "-ggdb" )
+
 find_package( SDL REQUIRED )
 
 find_package( SDL_ffmpeg REQUIRED )
