updated build system, documentation now builds in build directory instead of source directory, version number updated accordingly

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -8,10 +8,10 @@ if( DOXYGEN_FOUND )
 	set( DOCUMENTATION_HTML_FOOTER ${SDL_FFMPEG_SOURCE_DIR}/doc/footer.html )
 
 	configure_file( ${SDL_FFMPEG_SOURCE_DIR}/doc/doxygen.in
-					${SDL_FFMPEG_SOURCE_DIR}/doc/doxygen.config
+					${SDL_FFMPEG_BINARY_DIR}/doc/doxygen.config
 					@ONLY IMMEDIATE )
 
 	add_custom_target( documentation
-					   ${DOXYGEN_EXECUTABLE} ${SDL_FFMPEG_SOURCE_DIR}/doc/doxygen.config )
+					   ${DOXYGEN_EXECUTABLE} ${SDL_FFMPEG_BINARY_DIR}/doc/doxygen.config )
 
 endif( DOXYGEN_FOUND )
